fixed team sprite alignment

--- a/client/src/Components/BattleStage/BattleStage.css
+++ b/client/src/Components/BattleStage/BattleStage.css
@@ -19,7 +19,7 @@
   padding: 3px;
 }
 
-.sprite {
+.spriteContainer > .sprite {
   height: 100%;
   width: 100%;
 }
